[package]
name = "booster_simulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = "0.3.1"
dioxus-desktop = "0.3.0"
serde = "1.0.152"
serde-xml-rs = "0.6.0"
strong-xml = "0.6.3"
rand = { version = "0.8.5" }
toml = "0.7.1"

[profile.release]
opt-level = 3
